--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p>Select Modes</p>
         <button onclick="startLoading('singleplayer.php')">1 Player Mode</button>
         <button onclick="startLoading('welcome.php')">Multiplayer Mode</button>
-        <button onclick="startLoading('3pm.php')">3 Player Mode</button>
+        <button onclick="startLoading('3player.html')">3 Player Mode</button>
         <div class="loading-container">
             <div class="loading-bar" id="loadingBar"></div>
         </div>
